package com.example.learningmaterials.设计模式.g_外观模式.inverst;

public class NationalDebt extends Inverst {
    public NationalDebt() {
        super("国债");
    }
}
