package com.example.learningmaterials.设计模式.g_外观模式.inverst;

public class Realty extends Inverst {
    public Realty() {
        super("房地产");
    }
}
