package com.example.learningmaterials.设计模式.g_外观模式.inverst;

public class Stock1 extends Inverst {
    public Stock1() {
        super("股票一");
    }
}
