package com.example.learningmaterials.设计模式.g_外观模式.inverst;

public class Stock2 extends Inverst {
    public Stock2() {
        super("股票二");
    }
}
