@startuml

class Client{
客户端
}

class Fund{
基金
--
+购买()
+赎回()
}

class Stock1{
股票一
--
+买()
+卖()
}

class Stock2{
股票二
--
+买()
+卖()
}

class NationalDebt{
国债
--
+买()
+卖()
}

class Realty{
房地产
--
+买()
+卖()
}

abstract class Inverst{
投资
--
+买()
+卖()
}

hide Client method
Client -> Fund
Stock1 --|> Inverst
Stock2 --|> Inverst
NationalDebt --|> Inverst
Realty --|> Inverst
Fund o--> Stock1
Fund o--> Stock2
Fund o--> NationalDebt
Fund o--> Realty


@enduml